# gg.game

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
src/game/: CMakeLists.txt
src/game/include/gg/game/: game.h
src/game/src/gg/game/: game.cpp
src/game/test/gg/game/: game_test.cpp
